pushing canny.ipynb

--- a/image-filtering-sharpening.ipynb
+++ b/image-filtering-sharpening.ipynb
@@ -2,67 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3d838036",
+   "execution_count": 7,
+   "id": "984723f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2"
+    "import cv2\n",
+    "import numpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "75b8deee",
+   "execution_count": 9,
+   "id": "3c531270",
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = cv2.imread('animate-social.webp')"
+    "image = cv2.imread('median_blurred_image.jpg')\n",
+    "kenrel = numpy.array([[0,-1,0],[-1,5,-1],[0,-1,0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "91734291",
+   "execution_count": 10,
+   "id": "14396902",
    "metadata": {},
    "outputs": [],
    "source": [
-    "blurred = cv2.medianBlur(src = image, ksize =15)"
+    "sharpen = cv2.filter2D(src=image, ddepth = -1, kernel = kenrel)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7545f5d7",
+   "execution_count": 11,
+   "id": "eae423b2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv2.imwrite('median_blurred_image.jpg', blurred)"
+    "cv2.imshow('Original Image', image)\n",
+    "cv2.imshow('Sharpened Image', sharpen)\n",
+    "cv2.waitKey(0)  \n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23bfccee",
+   "id": "15c82f1c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "cv2.imshow('original image', image)\n",
-    "cv2.imshow('median blurred image', blurred)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
