--- a/image-processing-Canny.ipynb
+++ b/image-processing-Canny.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3d838036",
+   "id": "0c7945b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,55 +12,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "75b8deee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = cv2.imread('animate-social.webp')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "91734291",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "blurred = cv2.medianBlur(src = image, ksize =15)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "id": "7545f5d7",
+   "id": "e9c6b6cc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv2.imwrite('median_blurred_image.jpg', blurred)"
+    "image = cv2.imread('animate-social.webp', cv2.IMREAD_GRAYSCALE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "23bfccee",
+   "execution_count": 26,
+   "id": "d6584094",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv2.imshow('original image', image)\n",
-    "cv2.imshow('median blurred image', blurred)\n",
-    "cv2.waitKey(0)\n",
+    "canny_image = cv2.Canny(image=image, threshold1=50, threshold2=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "053ece3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_threshold = cv2.threshold(src=image, thresh=200, maxval=255, type=cv2.THRESH_BINARY)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d1dcec3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.imshow('Original Image', image)\n",
+    "cv2.imshow('Canny Image', canny_image)\n",
+    "cv2.imshow('Binary Threshold Image', binary_threshold)\n",
+    "cv2.waitKey(0)  \n",
     "cv2.destroyAllWindows()"
    ]
   }
